--- a/14.html
+++ b/14.html
@@ -36,7 +36,7 @@
         <input type="button" value="" class="downcard" style="background-image:url(水泥牆.jpg);font-size:20px;font-family:fantasy;color:blue;">
     </div>
     <input type="button" value="開始翻牌" id="beg"style="font-size: 30px;">
-    <input type="button" value="回主頁" id="beg"style="font-size: 30px;"onclick="location.href='index.html'">
+    <input type="button" value="回主頁" id="beg"style="font-size: 30px;"onclick="location.href='home.html'">
 </body>
 </html>
 <script>
