--- a/11.html
+++ b/11.html
@@ -28,7 +28,7 @@
     <div class="aa"></div>
     <div class="aa"></div><br>
     <input type="button" value="重新開始" id="re" style="font-size: 30px;background-color:#FFF0D4"onclick="location.href='11.html'">
-    <input type="button" value="回主頁" id="re" style="font-size: 30px;"onclick="location.href='home.html'">
+    <input type="button" value="回主頁" id="re" style="font-size: 30px;"onclick="location.href='12.html'">
 
 </body>
 </html>
